# ros2_teaching_ws

./: README.md
Test/: README.md
Test/cpp/1_topic/: demo01_talker_str.cpp  demo02_listener_str.cpp  demo03_talker_stu.cpp  demo04_listener_stu.cpp
Test/cpp/2_service/: demo01_server.cpp  demo02_client.cpp
Test/python/1_topic/: demo01_talker_str_py.py  demo02_listener_str_py.py  demo03_talker_stu_py.py  demo04_listener_stu_py.py
Test/python/2_service/: demo01_server_py.py  demo02_client_py.py
src/pkg00_interfaces/: CMakeLists.txt  package.xml
src/pkg01_helloworld_cpp/: CMakeLists.txt  package.xml
src/pkg01_helloworld_cpp/src/: helloworld.cpp
src/pkg01_helloworld_py/: package.xml  setup.cfg  setup.py
src/pkg01_helloworld_py/pkg01_helloworld_py/: helloworld.py
src/pkg02_topic_cpp/: CMakeLists.txt  package.xml
src/pkg02_topic_cpp/src/: demo01_listener_cpp.cpp  demo01_talker_cpp.cpp
src/pkg02_topic_py/: package.xml  setup.cfg  setup.py
src/pkg02_topic_py/pkg02_topic_py/: demo01_listener_py.py  demo01_talker_py.py
src/pkg03_topic_cpp/: CMakeLists.txt  package.xml
src/pkg03_topic_cpp/launch/: topic_cpp.launch.py
src/pkg03_topic_cpp/src/: demo02_listener_cpp.cpp  demo02_talker_cpp.cpp
src/pkg03_topic_py/: package.xml  setup.cfg  setup.py
src/pkg03_topic_py/launch/: topic_py.launch.py
src/pkg03_topic_py/pkg03_topic_py/: demo02_listener_py.py  demo02_talker_py.py
src/pkg04_service_cpp/: CMakeLists.txt  package.xml
src/pkg04_service_cpp/src/: demo01_client_cpp.cpp  demo01_server_cpp.cpp
src/pkg04_service_py/: package.xml  setup.cfg  setup.py
src/pkg04_service_py/pkg04_service_py/: demo01_client_py.py  demo01_server_py.py
